--- a/StreamerUpdate/MainWindow.xaml
+++ b/StreamerUpdate/MainWindow.xaml
@@ -37,7 +37,7 @@
       Grid.Column="1"
       BorderBrush="Black"
       BorderThickness="2">
-      <Grid>
+      <Grid Margin="5">
         <Grid.ColumnDefinitions>
           <ColumnDefinition />
           <ColumnDefinition />
@@ -77,6 +77,27 @@
             VerticalAlignment="Center"
             Foreground="White"
             Text="Camera OK!" />
+        </Grid>
+        <Grid Grid.Column="1">
+          <ItemsControl Margin="10" ItemsSource="{Binding InputMonitor.AudioInfos}">
+            <ItemsControl.ItemTemplate>
+              <DataTemplate>
+                <Grid>
+                  <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition />
+                  </Grid.ColumnDefinitions>
+                  <TextBlock Text="{Binding Name}"  Margin="5"/>
+                  <ProgressBar Grid.Column="1"
+                    Height="20"
+                    Maximum="100"
+                    Minimum="0"
+                    Value="{Binding Value, Mode=OneWay}" />
+                </Grid>
+              </DataTemplate>
+
+            </ItemsControl.ItemTemplate>
+          </ItemsControl>
         </Grid>
       </Grid>
     </Border>
