--- a/StreamerUpdate/MVVM/View/MainWindow.xaml
+++ b/StreamerUpdate/MVVM/View/MainWindow.xaml
@@ -8,7 +8,7 @@
   xmlns:local="clr-namespace:StreamerUpdate"
   xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-  Title="MainWindow"
+  Title="Church Streamer"
   Width="800"
   Height="450"
   Closing="MainWindow_OnClosing"
@@ -17,26 +17,39 @@
   mc:Ignorable="d">
   <Grid>
     <Grid.RowDefinitions>
-      <RowDefinition Height="Auto" />
-      <RowDefinition />
+      <RowDefinition Height="*" />
+      <RowDefinition Height="2*" />
     </Grid.RowDefinitions>
     <Grid.ColumnDefinitions>
-      <ColumnDefinition Width="Auto" />
-      <ColumnDefinition />
+      <ColumnDefinition Width="3*" />
+      <ColumnDefinition Width="*" />
     </Grid.ColumnDefinitions>
+    <StackPanel VerticalAlignment="Center" Orientation="Vertical">
+      <TextBlock
+        HorizontalAlignment="Center"
+        FontSize="36"
+        Foreground="{DynamicResource MahApps.Brushes.AccentBase}"
+        Text="Service Name:" />
+      <TextBox
+        VerticalAlignment="Center"
+        HorizontalContentAlignment="Center"
+        FontSize="80"
+        Text="{Binding ServiceName}"
+        TextWrapping="Wrap"
+        VerticalScrollBarVisibility="Auto" />
+    </StackPanel>
     <Button
       x:Name="StartStreamingButton"
-      Height="40"
+      Grid.Column="1"
       Margin="5"
       Click="StartStreamingClick"
       Command="{Binding StartStreamingCommand}"
-      Content="Start Streaming"
-      Style="{StaticResource MahApps.Styles.Button.Square.Accent}" />
-    <TextBox
-      Grid.Column="1"
-      Height="20"
-      VerticalAlignment="Center"
-      Text="{Binding ServiceName}" />
+      IsEnabled="{Binding CanStream}"
+      Style="{StaticResource MahApps.Styles.Button.Square.Accent}">
+      <Viewbox>
+        <TextBlock Text="Start Streaming" />
+      </Viewbox>
+    </Button>
     <Border
       Grid.Row="1"
       Grid.ColumnSpan="2"
@@ -94,7 +107,7 @@
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition />
                   </Grid.ColumnDefinitions>
-                  <TextBlock Margin="5" Text="{Binding Name}" />
+                  <TextBlock Margin="5" Text="{Binding Name}" FontSize="20" />
                   <ProgressBar
                     Grid.Column="1"
                     Height="20"
