--- a/StreamerUpdate/MVVM/View/MainWindow.xaml
+++ b/StreamerUpdate/MVVM/View/MainWindow.xaml
@@ -2,7 +2,6 @@
   x:Class="StreamerUpdate.MainWindow"
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-  xmlns:appContainer="clr-namespace:StreamerUpdate.AppContainer"
   xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
   xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
   xmlns:local="clr-namespace:StreamerUpdate"
@@ -11,7 +10,6 @@
   Title="Church Streamer"
   Width="800"
   Height="450"
-  Closing="MainWindow_OnClosing"
   Loaded="MainWindow_OnLoaded"
   WindowState="Maximized"
   mc:Ignorable="d">
@@ -107,7 +105,10 @@
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition />
                   </Grid.ColumnDefinitions>
-                  <TextBlock Margin="5" Text="{Binding Name}" FontSize="20" />
+                  <TextBlock
+                    Margin="5"
+                    FontSize="20"
+                    Text="{Binding Name}" />
                   <ProgressBar
                     Grid.Column="1"
                     Height="20"
@@ -122,9 +123,5 @@
         </Grid>
       </Grid>
     </Border>
-    <appContainer:AppControl
-      x:Name="_appControl"
-      Grid.Row="1"
-      Grid.Column="1" />
   </Grid>
 </mah:MetroWindow>
